BUG FIX: post cards cut off at the bottom of the page

--- a/client/src/components/PostCard/post-card.scss
+++ b/client/src/components/PostCard/post-card.scss
@@ -39,6 +39,9 @@ $screen-xl-min: 1200px;
     @content;
   }
 }
+.post-card-container{
+  padding-bottom: 5%;
+}
 .post-card {
   background: #1f1f1f;
   padding: 0px 10px 10px 10px;
